<resources>
    <string name="app_name">HiddenGemsTouristSpots</string>
    <string name="dog_age">Summary: %1$s</string>
    <string name="dog_hobbies">Rating: %1$s</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="grid">Grid</string>
    <string name="get_directions">Get directions</string>
    <string name="hidden_gems">Hidden Gems</string>
    <string name="add_hidden_gem">Add hidden gem</string>
    <string name="view_hidden_gems">View Hidden Gems</string>
    <string name="settings">Settings</string>
    <string name="rating">Rating: %1$s/5</string>



    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Share your location with Hidden Gems?</string>
    <string name="stop_location_updates_button_text">Stop sharing your location with Hidden Gems?</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="add_rating">add rating</string>
    <string name="submit">Submit</string>
    <string name="dark_light_mode">dark/light mode</string>
    <string name="type_a_city">Type A City</string>
    <string name="or_enter_city">Or Enter City</string>
    <string name="set_your_city">Set Your City</string>
    <string name="select_image">Select image</string>
    <string name="enter_experience_name">Enter Experience name</string>
    <string name="type_a_name">Type a name</string>
    <string name="enter_city">Enter City:</string>
    <string name="filter_by_city">Filter by city:</string>
    <string name="share_location_with_hidden_gems">Share location with Hidden Gems?</string>
    <string name="icon_of_a_musical_note">Icon of a musical note</string>
    <string name="enter_a_us_city">Enter a US City</string>
    <string name="enter_review">Enter Review</string>
    <string name="type_a_review">Type a review</string>
    <string name="enter_rating">Enter rating:</string>
    <string name="more_info">More info</string>
    <string name="get_dirs">Get Directions</string>
</resources>